Bug 1624318 - Serialize replacement config input stream as a blob. r=baku,necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D71872