dom/file/ipc/IPCBlobUtils.cpp
@@ -78,7 +78,8 @@ already_AddRefed<BlobImpl> Deserialize(const IPCBlob& aIPCBlob) {
 template <typename M>
 nsresult SerializeInputStreamParent(nsIInputStream* aInputStream,
                                     uint64_t aSize, uint64_t aChildID,
-                                    IPCBlob& aIPCBlob, M* aManager) {
+                                    PIPCBlobInputStreamParent*& aActorParent,
+                                    M* aManager) {
   // Parent to Child we always send a IPCBlobInputStream.
   MOZ_ASSERT(XRE_IsParentProcess());
 
@@ -111,59 +112,57 @@ nsresult SerializeInputStreamParent(nsIInputStream* aInputStream,
     return NS_ERROR_FAILURE;
   }
 
-  aIPCBlob.inputStream() = parentActor;
+  aActorParent = parentActor;
   return NS_OK;
 }
 
 template <typename M>
 nsresult SerializeInputStreamChild(nsIInputStream* aInputStream,
-                                   IPCBlob& aIPCBlob, M* aManager) {
+                                   IPCBlobStream& aIPCBlob, M* aManager) {
   AutoIPCStream ipcStream(true /* delayed start */);
   if (!ipcStream.Serialize(aInputStream, aManager)) {
     return NS_ERROR_FAILURE;
   }
 
-  aIPCBlob.inputStream() = ipcStream.TakeValue();
+  aIPCBlob = ipcStream.TakeValue();
   return NS_OK;
 }
 
 nsresult SerializeInputStream(nsIInputStream* aInputStream, uint64_t aSize,
-                              uint64_t aChildID, IPCBlob& aIPCBlob,
+                              PIPCBlobInputStreamParent*& aActorParent,
                               ContentParent* aManager) {
-  return SerializeInputStreamParent(aInputStream, aSize, aChildID, aIPCBlob,
+  return SerializeInputStreamParent(aInputStream, aSize, aManager->ChildID(),
+                                    aActorParent, aManager);
+}
+
+nsresult SerializeInputStream(nsIInputStream* aInputStream, uint64_t aSize,
+                              IPCBlobStream& aIPCBlob,
+                              ContentParent* aManager) {
+  aIPCBlob = (PIPCBlobInputStreamParent*)nullptr;
+  return SerializeInputStreamParent(aInputStream, aSize, aManager->ChildID(),
+                                    aIPCBlob.get_PIPCBlobInputStreamParent(),
                                     aManager);
 }
 
 nsresult SerializeInputStream(nsIInputStream* aInputStream, uint64_t aSize,
-                              uint64_t aChildID, IPCBlob& aIPCBlob,
+                              IPCBlobStream& aIPCBlob,
                               PBackgroundParent* aManager) {
-  return SerializeInputStreamParent(aInputStream, aSize, aChildID, aIPCBlob,
-                                    aManager);
+  aIPCBlob = (PIPCBlobInputStreamParent*)nullptr;
+  return SerializeInputStreamParent(
+      aInputStream, aSize, BackgroundParent::GetChildID(aManager),
+      aIPCBlob.get_PIPCBlobInputStreamParent(), aManager);
 }
 
 nsresult SerializeInputStream(nsIInputStream* aInputStream, uint64_t aSize,
-                              uint64_t aChildID, IPCBlob& aIPCBlob,
-                              ContentChild* aManager) {
+                              IPCBlobStream& aIPCBlob, ContentChild* aManager) {
   return SerializeInputStreamChild(aInputStream, aIPCBlob, aManager);
 }
 
 nsresult SerializeInputStream(nsIInputStream* aInputStream, uint64_t aSize,
-                              uint64_t aChildID, IPCBlob& aIPCBlob,
+                              IPCBlobStream& aIPCBlob,
                               PBackgroundChild* aManager) {
   return SerializeInputStreamChild(aInputStream, aIPCBlob, aManager);
 }
-
-uint64_t ChildIDFromManager(ContentParent* aManager) {
-  return aManager->ChildID();
-}
-
-uint64_t ChildIDFromManager(PBackgroundParent* aManager) {
-  return BackgroundParent::GetChildID(aManager);
-}
-
-uint64_t ChildIDFromManager(ContentChild* aManager) { return 0; }
-
-uint64_t ChildIDFromManager(PBackgroundChild* aManager) { return 0; }
 
 template <typename M>
 nsresult SerializeInternal(BlobImpl* aBlobImpl, M* aManager,
@@ -219,7 +218,7 @@ nsresult SerializeInternal(BlobImpl* aBlobImpl, M* aManager,
   }
 
   rv = SerializeInputStream(inputStream, aIPCBlob.size(),
-                            ChildIDFromManager(aManager), aIPCBlob, aManager);
+                            aIPCBlob.inputStream(), aManager);
   if (NS_WARN_IF(rv.Failed())) {
     return rv.StealNSResult();
   }
