dom/file/ipc/IPCBlobUtils.h
@@ -47,6 +47,12 @@
  * parent process and sent to content (a FilePicker creates Blobs and it runs on
  * the parent process).
  *
+ * DocumentLoadListener uses blobs to serialize the POST data back to the
+ * content process (for insertion into session history). This lets it correclty
+ * handle OS files by reference, and avoid copying the underlying buffer data
+ * unless it is read. This can hopefully be removed once SessionHistory is
+ * handled in the parent process.
+ *
  * Child to Parent Blob Serialization
  * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  *
@@ -224,6 +230,7 @@ namespace dom {
 class IPCBlob;
 class ContentChild;
 class ContentParent;
+class PIPCBlobInputStreamParent;
 
 namespace IPCBlobUtils {
 
@@ -243,6 +250,10 @@ nsresult Serialize(BlobImpl* aBlobImpl, ContentParent* aManager,
 nsresult Serialize(BlobImpl* aBlobImpl,
                    mozilla::ipc::PBackgroundParent* aManager,
                    IPCBlob& aIPCBlob);
+
+nsresult SerializeInputStream(nsIInputStream* aInputStream, uint64_t aSize,
+                              PIPCBlobInputStreamParent*& aActorParent,
+                              ContentParent* aManager);
 
 // WARNING: If you pass any actor which does not have P{Content,Background} as
 // its toplevel protocol, this method will MOZ_CRASH.
